# bgfx-test

./: .clang-tidy  .gitignore  CMakeLists.txt  build.bat  build.sh  libraries.cmake
cmake/: copyResources.cmake  libraries.cmake
include/: camera.h  color.h  engine-core.h  matrix.h  mesh.h  program.h  quaternion.h  shader.h  vector3.h  vectorN.h  window.h
include/imgui/: fs_imgui_image.bin.h  imgui_impl_bgfx.h  vs_imgui_image.bin.h
resources/: null.txt
resources/shaders/: cubes.frag  cubes.vert
src/: main.cpp  mesh.cpp  program.cpp  quaternion.cpp  shader.cpp  vector3.cpp  vectorN.cpp  window.cpp
src/imgui/: imgui_impl_bgfx.cpp
